[package]
name = "uucore_macros"
version = "0.0.2"
authors = []
license = "MIT"
description = "`uucore` proc-macros for use by various uutils projects"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { features=["extra-traits"], version="1.0" } ## 'extra-traits' for Debug traits
